--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,29 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+
+
+
+    <string-array name="bloodgroup_arrays">
+        <item>A+</item>
+        <item>A-</item>
+        <item>AB+</item>
+        <item>AB-</item>
+        <item>B+</item>
+        <item>B-</item>
+        <item>O+</item>
+        <item>O-</item>
+    </string-array>
+
+    <string-array name="Provinces_arrays">
+        <item>Akkar</item>
+        <item>Nabatieh</item>
+        <item>Baalback-Hermel</item>
+        <item>Beirut</item>
+        <item>Beqaa</item>
+        <item>Mount Lebanon</item>
+        <item>South Lebanon</item>
+        <item>North Lebanon</item>
+    </string-array>
+
 </resources>
